# smart-link-service

./: .env.example  AGENTS.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  start.bat  start.ps1  start.sh
.sisyphus/research/: startup-optimization-plan.md  streaming-response-analysis.md
agent/: AGENTS.md  __init__.py  metrics.py
agent/agentscope/: __init__.py  agent_factory.py  hub.py  pipeline.py  toolkit.py
agent/cache/: __init__.py  agent_config_cache.py  keygen.py  llm_cache.py
agent/core/: __init__.py  chunk_builder.py  context.py  executor.py  interrupt_manager.py  memory.py  message_hub.py  orchestrator.py  plan_agent.py  prompt_builder.py  vector_store.py
agent/distribution/: __init__.py
agent/llm/: __init__.py  client.py  resolver.py  retry.py
agent/mcp/: __init__.py  client.py
agent/memory/: __init__.py  agentscope_adapter.py  manager.py
agent/skills/: __init__.py  base.py  loader.py
agent/skills/builtin/: __init__.py  search.py
agent/subagents/: __init__.py  base.py  code.py  data.py  doc.py  pool.py  research.py
auth/: __init__.py
auth/callbacks/: __init__.py  html_callback.py
auth/flows/: __init__.py  authorization_code.py  client_credentials.py
auth/providers/: __init__.py  base.py  github.py  gitlab.py  google.py  registry.py  state.py
config/: mcp_servers.yml
config/grafana/dashboards/: agent-monitoring.json  api-performance.json
core/: AGENTS.md  __init__.py  config.py  exceptions.py  security.py  time_utils.py
core/logging/: __init__.py  audit.py  formatter.py
db/: __init__.py  session.py
docker/: Dockerfile  docker-compose.infra.yml  docker-compose.yml  start-dev.bat  start-dev.sh
docs/: ARCHITECTURE-V2.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  架构设计详细文档.md
docs/superpowers/plans/: 2026-04-12-agentscope-phase2.md  2026-04-13-agent-design-api.md  2026-04-14-agent-config-caching.md  2026-04-14-error-handling-enhancement.md  2026-04-14-llm-resilience.md  2026-04-14-llm-response-caching.md  2026-04-14-observability-enhancement.md  2026-04-14-prometheus-monitoring.md  2026-04-17-mcp-integration-gap-fix-plan.md  2026-04-17-plugin-marketplace-plan.md
docs/superpowers/specs/: 2026-04-11-agentscope-integration-design.md  2026-04-12-agentscope-phase2-design.md  2026-04-13-agent-design-api-design.md  2026-04-13-mcp-integration-design.md  2026-04-14-agent-config-caching-design.md  2026-04-14-error-handling-enhancement-design.md  2026-04-14-llm-resilience-design.md  2026-04-14-llm-response-caching-design.md  2026-04-14-observability-enhancement-design.md  2026-04-14-prometheus-monitoring-design.md  2026-04-17-mcp-integration-gap-fix-design.md  2026-04-17-plugin-marketplace-design.md  2026-04-19-skills-management-design.md
gateway/: AGENTS.md  __init__.py  main.py
gateway/api/: __init__.py
gateway/api/v1/: __init__.py  agent_design.py  agents.py  applications.py  auth.py  chat_completions.py  conversations.py  executions.py  mcp_servers.py  plugins.py  resources.py  websocket.py
gateway/channels/: __init__.py  base.py
gateway/middleware/: __init__.py  auth.py  logging.py  metrics.py  rate_limit.py  request_id.py
gateway/websocket/: __init__.py  handlers.py  heartbeat.py  lane.py  manager.py  protocol_converter.py  router.py
models/: __init__.py  agent.py  agent_cache.py  application.py  cache.py  execution.py  oauth.py  plugin.py  tenant.py  workflow.py
schemas/: __init__.py  agent.py  agent_design.py  common.py  mcp.py  openai_compat.py  plugin.py
scripts/: add_oauth_tables.py  create_test_data.py  init_db.py  init_default_agent.py  migrate_skills_quick.py  test_llm_call.py  test_llm_client.py  test_websocket.py
services/: AGENTS.md  __init__.py  agent_design_service.py  agent_service.py  application_service.py  auth_service.py  conversation_service.py  resource_service.py  session_manager.py  skill_file_service.py
services/runtime/: __init__.py  execution.py  routing.py  streaming.py
smart_link_service/: __init__.py
tests/: conftest.py
tests/fixtures/: mock_config.py
tests/integration/: __init__.py  test_agentscope_flow.py  test_pipeline_flow.py  test_sse_streaming.py  test_websocket_streaming.py
tests/performance/: test_streaming_performance.py
tests/unit/: __init__.py  test_agent_config_cache.py  test_agent_design.py  test_agent_factory.py  test_chat_completions_endpoint.py  test_chunk_builder.py  test_error_handling.py  test_execution_model.py  test_execution_service.py  test_executions_endpoint.py  test_hub.py  test_interrupt_manager.py  test_llm_cache.py  test_llm_retry.py  test_llm_stream_openai.py  test_logging.py  test_mcp_client.py  test_mcp_model_fields.py  test_message_hub.py  test_metrics.py  test_oauth_callback.py  test_oauth_flows.py  test_oauth_providers.py  test_oauth_state.py  test_openai_schemas.py  test_orchestrator_streaming.py  test_pipeline.py  test_plan_agent.py  test_protocol_converter.py  test_routing_service.py  test_session_memory.py  test_streaming_exceptions.py  test_streaming_service.py  test_subagent_base.py  test_subagent_pool.py  test_toolkit.py  test_toolkit_mcp.py
