[project]
name = "smart-link-service"
version = "1.0.0"
description = "SmartLink Agent Management Platform - Backend Service"
authors = [{name = "SmartLink Team", email = "team@smartlink.com"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    # Core Framework
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.11.0,<3.0.0",
    "pydantic-settings>=2.9.0,<3.0.0",
    "email-validator>=2.2.0",          # Email validation for pydantic EmailStr
    
    # Database (Async SQLAlchemy)
    "sqlalchemy>=2.0.36,<3.0.0",
    "asyncpg>=0.30.0,<1.0.0",          # PostgreSQL async driver
    "aiosqlite>=0.20.0",               # SQLite async driver (development)
    "alembic>=1.14.0,<2.0.0",          # Database migrations
    
    # Redis
    "redis[asyncio]>=6.0.0,<7.0.0",    # Async Redis with connection pool
    
    # LLM Integration
    "litellm>=1.83.0,<2.0.0",          # Multi-provider LLM gateway (manages openai version)
    # openai is managed by litellm - don't pin separately
    "anthropic>=0.45.0,<1.0.0",        # Anthropic SDK (used by LiteLLM)
    
    # MCP (Model Context Protocol)
    "mcp>=1.27.0,<2.0.0",              # MCP SDK for tool calling
    
    # AgentScope (Agent Framework)
    "agentscope>=1.0.18,<2.0.0",       # Multi-agent framework
    
    # Security
    "python-jose[cryptography]>=3.4.0",  # JWT tokens
    "passlib[bcrypt]>=1.7.4",            # Password hashing
    "cryptography>=42.0.0",              # Cryptographic primitives
    
    # Utilities
    "python-dotenv>=1.0.1",              # Environment variables
    "httpx>=0.27.2",                      # Async HTTP client
    "aiofiles>=24.1.0",                   # Async file I/O
    "pyyaml>=6.0.2",                      # YAML parsing (MCP config)
    "jsonschema>=4.23.0",                 # JSON schema validation (skills)
    
    # Monitoring
    "prometheus-client>=0.21.1",          # Prometheus metrics
    
    # Production Server
    "gunicorn>=23.0.0",                   # Production WSGI server
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    
    # Code Quality
    "black>=24.1.1",
    "isort>=5.13.2",
    "mypy>=1.13.0",
    "ruff>=0.8.0",                        # Fast linter (alternative to flake8)
    
    # Type stubs
    "types-python-jose>=3.3.4",
    "types-pyyaml>=6.0.12",
    
    # Development Tools
    "watchfiles>=0.24.0",                 # File watching for hot reload
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["gateway*", "services*", "agent*", "models*", "schemas*", "core*", "db*", "auth*"]

# ============================================================
# Tool Configuration
# ============================================================

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.ruff_cache
    | __pycache__
    | \.cache
    | .venv
    | venv
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "tests/",
    "scripts/",
]

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "-v",
    "--tb=short",
]